<resources>
    <string name="app_name">Зона погрузки</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="sign_in">Войти</string>
    <string name="version">Версия %1$s</string>
    <string name="operations">Операции</string>
    <string name="passage">Рейс %1$s - %2$s</string>
    <string name="addSInvoice">Добавить S</string>
    <string name="deleteSInvoice">Удалить S</string>
    <string name="load">Погрузка</string>
    <string name="no_data">Данные отсутствуют</string>
    <string name="number">Номер</string>
    <string name="destination">Место назначения</string>
    <string name="bag_amount">Кол-во мешков</string>
    <string name="parcel_amount">Кол-во посылок</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="retry">Повторить</string>
    <string name="remove">Удалить</string>
    <string name="no_checked_items">Отсутствуют выбранные элементы</string>
    <string name="naming">Наименование</string>
    <string name="fact">Факт</string>
    <string name="Plan">План</string>
    <string name="finish">Готово</string>
    <string name="shpi_code">Код ШПИ</string>
    <string name="wrong_parcel">Мешок/посылка не относятся к данному транспорту</string>
    <string name="shpi_already_added">Мешок/посылка уже отсканированы</string>
    <string name="error_try_again">Ошибка. Попробуйте повторить позднее</string>
    <string name="successfully_added">Посылка/мешок успешно добавлены</string>
    <string name="error">Ошибка</string>
    <string name="scan_success">Все посылки успешно просканированы</string>
    <string name="list_of_parcels">Список посылок и емкостей</string>
    <string name="transport_list">Список транспорта</string>
    <string name="authorization">Авторизация</string>
    <string name="update">Обновить</string>
    <string name="exit">Выйти</string>
    <string name="yes">Да</string>
    <string name="do_you_want_to_exit">Вы уверены, что хотите выйти из аккаунта?</string>
    <string name="retry_loading">Повторить загрузку</string>
    <string name="s_invoice_number">Номер S накладной</string>
    <string name="s_invoices_added_successfully">S-накладные успешно добавлены</string>
    <string name="did_not_add_s_invoices">Ошибка. Не удалось добавить S-накладные</string>
    <string name="shpi_added">%1$s выделен</string>
    <string name="s_invoice_not_found">S-накладная не найдена</string>
    <string name="shpis_missing">"Важно!!! Данные отправления\n%1$s\nявляются частью транспортной накладной: %2$s"</string>
    <string name="overall">ВСЕГО</string>
    <string name="decouple_missing">Отвязать недостающие</string>
    <string name="decouple_scan_success">Отвязка проведена успешно</string>
    <string name="continue_scan">Продолжить сканирование</string>
    <string name="error_wrong_user">Транспорт находится в обработке другим пользователем: %1$s</string>
    <string name="error_wrong_department">Транспорт находится на другой станции</string>
    <string name="error_wrong_status">Транспорт находится в пути</string>
    <string name="error_wrong_t_invoice">Действие запрещено. Вам необходимо сначала отправить транспорт %1$s</string>
    <string name="weight_kilos">Вес (кг)</string>


    <string-array name="operations">
        <item>Добавить S</item>
<!--
        <item>Удалить S</item>
-->
        <item>Погрузка</item>
    </string-array>
</resources>