<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layout_empty"
        layout="@layout/layout_empty" />

    <View
        android:id="@+id/v_top_line"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:id="@+id/ll_table_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/v_top_line"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_naming"
            style="@style/TableCellStyle.Title"
            android:layout_weight="3"
            android:text="@string/naming" />

        <TextView
            android:id="@+id/tv_plan"
            style="@style/TableCellStyle.Title"
            android:text="@string/Plan" />

        <TextView
            android:id="@+id/tv_fact"
            style="@style/TableCellStyle.Title"
            android:text="@string/fact" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/et_shpi"
        app:layout_constraintTop_toBottomOf="@id/ll_table_title"
        tools:listitem="@layout/item_parcel_type" />

    <EditText
        android:id="@+id/et_shpi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent_medium"
        android:gravity="center"
        android:hint="@string/shpi_code"
        android:importantForAutofill="no"
        android:inputType="textCapCharacters"
        app:layout_constraintBottom_toTopOf="@id/b_cancel" />

    <Button
        android:id="@+id/b_finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent_medium"
        android:layout_marginBottom="@dimen/indent_medium"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/b_cancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent_medium"
        android:layout_marginBottom="@dimen/indent_medium"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/b_finish" />
</androidx.constraintlayout.widget.ConstraintLayout>