<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/authFragment">

    <fragment
        android:id="@+id/authFragment"
        android:name="kz.kazpost.loadingarea.ui.auth.AuthFragment"
        android:label="@string/authorization"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_transportFragment"
            app:destination="@id/transportFragment" />
    </fragment>

    <fragment
        android:id="@+id/transportFragment"
        android:name="kz.kazpost.loadingarea.ui.transport.TransportFragment"
        android:label="@string/transport_list"
        tools:layout="@layout/fragment_transport">
        <action
            android:id="@+id/action_transportFragment_to_addSInvoiceFragment"
            app:destination="@id/addSInvoiceFragment" />
        <action
            android:id="@+id/action_transportFragment_to_removeSInvoiceFragment"
            app:destination="@id/removeSInvoiceFragment" />
        <action
            android:id="@+id/action_transportFragment_to_scanFragment"
            app:destination="@id/scanFragment" />
    </fragment>
    <fragment
        android:id="@+id/addSInvoiceFragment"
        android:name="kz.kazpost.loadingarea.ui.s_invoice.add.AddSInvoiceFragment"
        android:label="{tInvoiceNumber}"
        tools:layout="@layout/fragment_add_s_invoice">
        <argument
            android:name="tInvoiceId"
            app:argType="long" />
        <argument
            android:name="tInvoiceNumber"
            app:argType="string" />
        <argument
            android:name="notYetVisitedDepartments"
            app:argType="string[]" />
    </fragment>
    <fragment
        android:id="@+id/removeSInvoiceFragment"
        android:name="kz.kazpost.loadingarea.ui.s_invoice.remove.RemoveSInvoiceFragment"
        android:label="{tInvoiceNumber}"
        tools:layout="@layout/fragment_remove_s_invoice">
        <argument
            android:name="tInvoiceNumber"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/scanFragment"
        android:name="kz.kazpost.loadingarea.ui.scan.ScanFragment"
        android:label="@string/list_of_parcels"
        tools:layout="@layout/fragment_scan">
        <argument
            android:name="index"
            app:argType="integer" />
        <argument
            android:name="tInvoiceNumber"
            app:argType="string" />
        <argument
            android:name="tInvoiceId"
            app:argType="long" />
    </fragment>


</navigation>